--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,9 +1,10 @@
 <resources>
     <string name="app_name">FudBox</string>
     <!-- TODO: Remove or change this placeholder text -->
-    <string name="hello_blank_fragment">Hello blank fragment</string>
-    <string name="title_activity_home">FudBox</string>
-    <string name="x">x</string>
+    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
+    <string name="title_activity_home" translatable="false">FudBox</string>
+    <string name="x" translatable="false">x</string>
     <string name="total_price">Total Price</string>
-    <string name="euro">€ %1$s</string>
+    <string name="euro" translatable="false">€ %1$s</string>
+    <string name="google_pay_status_unavailable">Unfortunately, Google Wallet is not available on this phone.</string>
 </resources>
