--- a/app/src/main/res/values-it/strings.xml
+++ b/app/src/main/res/values-it/strings.xml
@@ -42,4 +42,5 @@
     <string name="user_info">Informazioni Utente</string>
     <string name="logged_in_user">Benvenuto,</string>
     <string name="set_address">Indirizzo impostato</string>
+    <string name="email_password_not_inserted">Email e Password devono essere inserite</string>
 </resources>
